syntax = "proto3";// Make sure to have proto3 for your proto files.
// generate separate or multiple java file for each generated class.
option java_multiple_files = true;
// Package inside the src/main/java where generated classes will reside.
option java_package = "smart.building.envControl";
// Class name of the wrapper class which represent this file.
option java_outer_classname = "BuildingEnvControlServiceImpl";

package smart;
service BuildingEnvControlService {
	//Unary
	rpc airConditionerChange (ChangeRequest) returns (ChangeReply) {}

	//Unary
	rpc humidityCheck (HumidityRequest) returns (HumidityReply) {}

 }
// define each variable in rpc method separately
   message HumidityRequest{
 	string status = 1;
 	int32 figure = 2;
 }

  message HumidityReply{
 	string message = 1;
 }

  message ChangeRequest{
 	string status = 1;
 }

  message ChangeReply{
 	string message = 1;
 }